Unity DIコンテナを使用するようBootstrapperを調整した。 ログを出力するように調整した。

--- a/src/JenkinsNotification.Core/NLog.config
+++ b/src/JenkinsNotification.Core/NLog.config
@@ -41,7 +41,7 @@
             layout="[${longdate}]|${uppercase:${level}}|${message}" />
     <target xsi:type="Console"
             name="lc"
-            layout="$>{longdate} [${uppercase:${level}}] ${message}" />
+            layout=">${longdate} [${uppercase:${level}}] ${message}" />
   </targets>
 
   <rules>
